--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-hot-loader": "^3.0.0-beta.7"
+    "react-dom": "^15.5.4"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
@@ -29,6 +28,8 @@
     "file-loader": "^0.11.2",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.5",
+    "react-hot-loader": "^3.0.0-beta.7",
+    "react-router-dom": "^4.1.1",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.8",
